# ITC-Egypt-2026-Spectrum-Anomaly-Detection

./: Dockerfile  Makefile  README.md  START.bat  alembic.ini  desktop_build.py  docker-compose.yml  entrypoint.py  package.json  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt  setup.py
config/: config.yaml  logging.yaml  ollama_config.yaml
config/keys/: README.md
deployment/: Dockerfile  Dockerfile.ollama  docker-compose.yml  nginx.conf
deployment/kubernetes/: configmap.yaml  deployment.yaml  service.yaml
deployment/raspberry_pi/: install_ollama.sh  requirements_pi.txt  setup.sh
docs/api/: api_documentation.md  postman_collection.json
docs/database/: er_diagram.md  schema.sql
docs/reports/: FINAL_REPORT.md  training_log.csv
docs/security/: encryption_guide.md  key_management_policy.md
docs/user_manual/: installation_guide.md
hooks/: hook-streamlit.py
notebooks/: 01_data_exploration.ipynb  02_model_training.ipynb  03_results_analysis.ipynb
scripts/: backup_encrypted_db.py  deploy.sh  download_models.py  generate_key.py  rotate_key.py  run_tests.sh  setup_database.py  setup_ollama.py
src/ai_agent/: agent.py  config.py  llm_handler.py  ollama_client.py
src/ai_model/: __init__.py  model_loader.py  predict.py
src/api/: agent_routes.py  main.py  routes.py  websocket.py
src/dashboard/: app.py  (+1 more)
tests/: test_ai_agent.py  test_ai_model.py  test_api.py  test_dashboard.py  test_database.py  test_encryption.py  test_hardware.py  test_integration.py  test_signal_processing.py
website/: README.md  index.html
(+18 files in other folders)
