[project]
name = "sadar"
version = "0.1.0"
description = "AI-powered RF spectrum anomaly detection for Drone, Normal, and Jamming signals."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "SADAR Team" }]
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "ml: tests that require TensorFlow/model runtime",
  "integration: integration tests that touch multiple subsystems",
]
addopts = "-ra"

[tool.ruff]
line-length = 110
target-version = "py310"
exclude = [
  ".git",
  ".venv",
  "venv",
  "__pycache__",
  ".pytest_cache",
  "notebooks",
]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
ignore = []
